Добавление страницы с заданиями и стилей

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1,49 +1,37 @@
-/* Стили для всего контейнера */
-body, html {
-    height: 100%; /* Устанавливаем высоту на 100% для корректного центрирования */
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f0f0f0;
 }
 
-.container {
-    display: flex; /* Используем flexbox для центрирования и размещения блоков в ряд */
-    justify-content: center; /* Центрируем по горизонтали */
-    align-items: center; /* Центрируем по вертикали */
-    height: 100%; /* Занимаем всю высоту окна браузера */
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
 }
 
-/* Стили для прямоугольников */
-.rectangle {
-    background-color: #3498db; /* Цвет фона */
-    margin: 10px; /* Отступ между прямоугольниками */
-    flex-shrink: 0; /* Запрещаем сжатие прямоугольников */
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
 }
 
-/* Задаем размеры прямоугольников */
-/* Размеры каждого следующего прямоугольника 70% от предыдущего */
-/* Размер первого прямоугольника зависит от размеров окна браузера */
-.rectangle:first-child {
-    width: 100%;
-    height: 100%;
+nav li {
+    display: inline;
+    margin-right: 20px;
 }
 
-/* Размеры остальных прямоугольников */
-.rectangle:nth-child(2) {
-    width: 70%;
-    height: 70%;
+nav a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
 }
 
-.rectangle:nth-child(3) {
-    width: 49%;
-    height: 49%;
-}
-
-.rectangle:nth-child(4) {
-    width: 34.3%;
-    height: 34.3%;
-}
-
-.rectangle:nth-child(5) {
-    width: 24.01%;
-    height: 24.01%;
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
 }
