--- a/project/css/style.css
+++ b/project/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #94A684;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -30,7 +30,7 @@ nav a {
 }
 
 footer {
-    background-color: #333;
+    background-color: #94A684;
     color: #fff;
     text-align: center;
     padding: 10px;
