--- a/project/css/style.css
+++ b/project/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #94A684;
+    background-color: #ffc8dd;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -25,12 +25,12 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: #333;
+    color: #F2789F;
     font-weight: bold;
 }
 
 footer {
-    background-color: #94A684;
+    background-color: #ffc8dd;
     color: #fff;
     text-align: center;
     padding: 10px;
